# Peridynamics_1D

./: .gitignore  .gitmodules  CMakeLists.txt  Points.cpp  Points.h  README.md  main.cpp  peridynamics_1d.sh
1D/: Points.cpp  Points.h  hyperdual.h  main.cpp
